# node

./: configure.ac  ovirt-node.spec.in
recipe/: Makefile.am  archipel-install.ks  archipel-minimizer.ks  archipel-node-image.ks.in  archipel-pkgs.ks  archipel-post.ks  archipel.ks  centos-pkgs.ks  common-install.ks  common-pkgs.ks  fedora-pkgs.ks  ovirt-node-image.ks.in
recipe-archipel/: Makefile.am  common-install.ks  common-manifest.ks  common-minimizer.ks  common-nochroot.ks  common-pkgs.ks  common-post.ks
scripts/: ovirt-auto-install.py  ovirt-firstboot
